--- a/styles/temples.css
+++ b/styles/temples.css
@@ -20,7 +20,7 @@ header {
     background-color: var(--primary-color);
     padding: 1em;
     padding-left: 2em;
-    max-width: auto;
+    max-width: 100%;
 }
 button {
     width: 3em;
